Fix horizontal scroll on sidebar and modify code block styles

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -71,3 +71,6 @@ body {
     }
 }
 
+.md-typeset pre>code {
+    border-radius: 5px;
+}
