--- a/docs/stylesheets/glossary-pages.css
+++ b/docs/stylesheets/glossary-pages.css
@@ -5,6 +5,3 @@ body.glossary-page h1 {
     font-weight: bold; 
 }
 
-body.glossary-page h5 {
-    color: black !important; 
-}
