--- a/docs/stylesheets/keyword-cloud.css
+++ b/docs/stylesheets/keyword-cloud.css
@@ -1,7 +1,7 @@
 .words-cloud-container {
 
-  
-  
+  height:80vh;
+  overflow: hidden;
   text-align: center;
 
 }
